--- a/style/results-view.css
+++ b/style/results-view.css
@@ -11,12 +11,17 @@ h1 {
     color: whitesmoke;
 }
 
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 4rem;
-    width: 95vw;
+button {
+    margin-top: 1rem;
+    background-color: #1e4ed2;
+    color: whitesmoke;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: none;
+}
+
+button:hover {
+    background-color: #3b68e6;
 }
 
 #results-table {
@@ -30,6 +35,19 @@ h1 {
     border-radius: 5px;
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 4rem;
+    width: 95vw;
+}
+
+.page-view-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 
 table {
     width: 100%;
@@ -56,9 +74,9 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
-
+/* 
 caption {
     font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 8px;
-}
+} */
